--- a/RainOrShine/Info.plist
+++ b/RainOrShine/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationUsageDescription</key>
+	<string>Hullo</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app uses your location to retrieve weather data.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
