Made setAPIKeys() methods in LocationAPIService and WeatherAPIService static... Made keys vars in LocationAPIService and WeatherAPIService static. Added dark sky API key to APIKeys.plist.

--- a/RainOrShine/APIKeys.plist
+++ b/RainOrShine/APIKeys.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>DarkSkyAPIKey</key>
+	<string>99fdb7916a09bf62906e8f81f265c59b</string>
 	<key>GooglePlacesAPIKeyiOS</key>
 	<string>AIzaSyBSFQOBp0ur5PmQU7WjMR_KyDozwZV3XIk</string>
 	<key>GooglePlacesAPIKeyWeb</key>
