A colored gradient background and app logo now appear when there are no images being displayed... Fixed an issue where "When No Photos Available" would not have a checkmark beside it in SettingsDetailTableViewContoller even if it is the currently selected option. Renamed WeatherViewControllerExtensionMFMailComposeViewControllerDelegate.swift to SettingsTableViewControllerExtensionMFMailComposeViewControllerDelegate.swift (it was mis-named). Fixed an issue where a white screen would appear when loading a new place, which gave the UI a jarring effect. Cleaned up code.

--- a/RainOrShine/Info.plist
+++ b/RainOrShine/Info.plist
@@ -23,7 +23,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSLocationUsageDescription</key>
-	<string>Hullo</string>
+	<string>This app uses your location to retrieve weather data.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app uses your location to retrieve weather data.</string>
 	<key>UILaunchStoryboardName</key>
